fixed header alignment

--- a/resume/style/header.scss
+++ b/resume/style/header.scss
@@ -6,7 +6,7 @@
 }
 
 #title {
-  padding: $boarder-padding;
+  padding: $boarder-padding 0px;
   border-right: $stroke;
   display: flex;
   flex-direction: column;
